--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,12 @@ environment:
     - perl_type: system
     - perl_type: strawberry
     - perl_type: cygwin
+    - perl_type: strawberry
+      perl_version: perl-5.24.3
+    - perl_type: strawberry
+      perl_version: perl-5.20.3
+    - perl_type: strawberry
+      perl_version: perl-5.18.4
 
 install:
   - 'call appveyor.cmd perl_setup'
