--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,11 +7,23 @@ environment:
     - perl_type: strawberry
     - perl_type: cygwin
     - perl_type: strawberry
-      perl_version: perl-5.24.3
+      perl_version: 5.24.3
     - perl_type: strawberry
-      perl_version: perl-5.20.3
+      perl_version: 5.20.3
     - perl_type: strawberry
-      perl_version: perl-5.18.4
+      perl_version: 5.18.4
+    - perl_type: strawberry
+      perl_version: 5.16.3
+    - perl_type: strawberry
+      perl_version: 5.14.4
+    - perl_type: strawberry
+      perl_version: 5.12.5
+    - perl_type: strawberry
+      perl_version: 5.10.1
+    - perl_type: strawberry
+      perl_version: 5.8.9
+    - perl_type: strawberry
+      perl_version: 5.6.2
 
 install:
   - 'call appveyor.cmd perl_setup'
@@ -23,5 +35,5 @@ build: off
 test_script:
   - 'prove -l t'
 
-matrix:
-  fast_finish: true
+#matrix:
+#  fast_finish: true
